# routes/request_api.py
@@ -1,5 +1,6 @@
 """The Endpoints to manage the BOOK_REQUESTS"""
 
+
 import smtplib
 from email.mime.text import MIMEText
 from passlib.hash import sha256_crypt
@@ -7,6 +8,8 @@ from datetime import datetime, timedelta
 from bson.objectid import ObjectId
 from flask import jsonify, abort, request, Blueprint, url_for, render_template
 import pymongo
+import jwt
+
 
 from validate_email import validate_email
 from flask_mail import Mail, Message
@@ -15,9 +18,11 @@ from itsdangerous import URLSafeTimedSerializer, SignatureExpired
 REQUEST_API = Blueprint('request_api', __name__)
 se = URLSafeTimedSerializer('Mybigsecretmaxefall!')
 mongo_client = "mongodb+srv://maxe:MAfall97@cluster0.q8jo5fg.mongodb.net/auth1"
+# "mongodb://localhost:27017"
 client = pymongo.MongoClient("mongodb://localhost:27017")
 db = client.auth1
 users = db.signUp1
+msge=db.sendMessages
 
 
 def get_blueprint():
@@ -53,6 +58,19 @@ def get_record_by_id(_id):
     #     abort(404)
     userId = users.find_one({"_id": _id})
     return jsonify(userId)
+@REQUEST_API.route('/senderMoney/<string:phoneNumber>', methods=['GET'])
+def get_record_by_phoneNumber(phoneNumber):
+    """Get book request details by it's id
+    @param _id: the id
+    @return: 200: a BOOK_REQUESTS as a flask/response object \
+    with application/json mimetype.
+    @raise 404: if book request not found
+    """
+
+    # if _id not in BOOK_REQUESTS:
+    #     abort(404)
+    userNumber = users.find_one({"phoneNumber": phoneNumber})
+    return jsonify(userNumber)
 
 
 @REQUEST_API.route('/register', methods=['POST'])
@@ -82,11 +100,16 @@ def register_record():
         '_id': str(ObjectId()),
         'lastname': data['lastname'],
         'firstname': data['firstname'],
-        'password': sha256_crypt.encrypt(data[('password')]),
+        'password':data[('password')],
         'email': data['email'],
+        'phoneNumber': data['phoneNumber'],
         'pays':data['pays'],
         'nationality':data['nationality'],
         'identity':data['identity'],
+        'room':data['room'],
+        'numberRoom':data['numberRoom'],
+        'conditionWithdrawal':data['conditionWithdrawal'],
+        'sentmail ':data['sentmail'],
         'timestamp': datetime.now().timestamp(),
 
 
@@ -112,7 +135,7 @@ def create_record():
         abort(400)
     data = request.get_json(force=True)
     email = data['email']
-    token = se.dumps(email, salt="confirm-email")
+   
     if not data.get('email'):
         abort(400)
     if not validate_email(data['email']):
@@ -122,10 +145,11 @@ def create_record():
 
     # new_uuid = str(uuid.uuid4())
     book_request = {
-        'password': data['password'],
+        'token': jwt.encode({"password":data['password']}, "secret", algorithm="HS256"),
+        
         'email': data['email'],
+       
         'timestamp': datetime.now().timestamp(),
-        'token': '{}'.format(token)
 
     }
     # BOOK_REQUESTS[new_uuid] = book_request
@@ -202,62 +226,48 @@ def change_record():
     updaPass = users.find_one_and_update(
         {"email": email}, {"$set":data})
     if updaPass is not None:
-        return jsonify(f'Your password {passwords} has been updated! You are now able to log in.', 'success'), 200
+        # return jsonify(f'Your password {passwords} has been updated! You are now able to log in.', 'success'), 200
+          return jsonify(  {
+                "status" : "success",
+                "message" : f"Your password {passwords} has been updated!",
+                
+            }), 200
     return jsonify("something went wrong")
 
 
 @REQUEST_API.route('/Forgotpassword', methods=['POST'])
 def forgot_record():
    
-    # if _id not in BOOK_REQUESTS:
-    #     abort(404)
-
     if not request.get_json():
         abort(400)
-
     data = request.get_json(force=True)
-
+    email = data['email']
+    # password = data['password']
+    token = se.dumps(email, salt="confirm-email")
     if not data.get('email'):
         abort(400)
     if not validate_email(data['email']):
-
         abort(400)
-    # if not data.get('password'):
-    #     abort(400)
-    email = data['email']
-    token = se.dumps(email)
-    # password = data['password']
+  
 
-    # book_request = {
-    #     'email': data['email'],
-    #     # 'password':  data['password'],
-    #     'timestamp': datetime.now().timestamp(),
-    #     'token': token
+ 
+       
 
 
-    # }
-    # link = url_for('confirm_email', token=token, _external=True)
+   
     user_exist = users.find_one({'email': email})
-    # msg.body = 'Your link is {}'.format(link)
+    
     if user_exist:
         s = smtplib.SMTP('smtp.gmail.com', 587)
         s.starttls()
         s.login("maguettefseye@gmail.com", "qklhksqmkoxmurra")
-        data = request.get_json(force=True)
-        email = data['email']
-        # password = data['password']
-        book_request = {
-            # 'password': data['password'],
-            'email': data['email'],
-            'timestamp': datetime.now().timestamp(),
-            'token': '{}'.format(token)
+    
+       
+     
 
-        }
-        # email = s.loads(token, salt='reset-password-salt', max_age=3600)
+       
 
-        password = 'bghgvfdrehjkkkuui'
-
-        msg = MIMEText(f"Voici votre mot de passe : {password} ,\n voici votre identifiant : {email}")
+        msg = MIMEText(f"Cliquer ici pour réinitialiser votre mot de passe : {url_for('request_api.confirm_email', _external=True,token=token)} ,\n voici votre identifiant : {email}")
         msg['Subject'] = 'Reset password'
         msg['From'] = 'maguettefseye@gmail.com'
         msg['To'] = email
@@ -266,19 +276,15 @@ def forgot_record():
         s.sendmail("maguettefseye@gmail.com", email, msg.as_string())
 
         s.quit()
-        result = jsonify(data)
+        result =  jsonify(  {
+                "status" : "success",
+                "message" : f"password reset link has been sent to your email",
+                
+            }), 200
     else:
-        result = jsonify(
-            {'message': 'this {} does not exist'.format(email)}), 400
+        result = jsonify({'message': 'this user does not exist'}), 400
     return result
-    # passwords=data['password']
-
-    # BOOK_REQUESTS[_id] = book_request
-    # updaPass = users.find_one_and_update(
-    #     {"email": email}, {"$set": {"password":passwords}})
-    # if updaPass is not None:
-    #     return jsonify(updaPass), 200
-    # return jsonify("something went wrong")
+   
 
 
 @REQUEST_API.route('/confirm_email/<token>')
@@ -320,6 +326,59 @@ def delete_record(_id):
         return jsonify({"status":"success", "message":"Register successfully deleted"}),200
 
     return jsonify({"status":"failed", "message":"Something went wrong"}),400
+
+@REQUEST_API.route('/sendMessage',methods=['POST'])
+def send_message():
+    if not request.get_json():
+            abort(400)
+    dataMessages = request.get_json(force=True)
+    fullname= dataMessages['fullname']
+    email = dataMessages['email']
+    subject=dataMessages['subject']
+    message=dataMessages['messages']
+    # password = data['password']
+    if not dataMessages.get('fullname'):
+            abort(400)
+    if not dataMessages.get('email'):
+        abort(400)
+    if not validate_email(dataMessages['email']):
+        abort(400)
+    if not dataMessages.get('subject'):
+            abort(400)
+    if not dataMessages.get('messages'):
+            abort(400)
+  
+
+ 
+       
+
+
+   
+    
+    user_exist = {
+        '_id':str(ObjectId()),
+        'fullname':fullname,
+        'email':email,
+        'subject':subject,
+        'messages':message
+    }
+    msge.insert_one(user_exist)
+    
+    s = smtplib.SMTP('smtp.gmail.com', 587)
+    s.starttls()
+    s.login("maguettefseye@gmail.com", "qklhksqmkoxmurra")
+    msg = MIMEText(f"Bonjour c\'est {fullname},\n {message} ")
+    msg['Subject'] = subject
+    msg['From'] = 'maguettefseye@gmail.com'
+    msg['To'] = email
+   
+
+    s.sendmail("maguettefseye@gmail.com", email, msg.as_string())
+
+    s.quit()
+    return jsonify(user_exist)
+      
+    
 
 
 
